<resources>
    <string name="app_name">StudyMateTwo</string>
    MainActivity
    -----------------------------------------------------------------------
    <string name="logo1">StudyMate</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="main_activity_logo1">회원이 아니신가요?</string>
    <string name="id">아이디</string>

    signupActivity
    ----------------------------------------------------------------------------------------------------
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="next">다음</string>
    <string name="insert_email">이메일을 입력해주세요</string>
    <string name="hint_email">1234@naver.com</string>
    <string name="insert_info">본인의 정보를 입력해주세요!</string>
    <string name="blog">블로그 주소</string>
    <string name="job">직업</string>
    <string name="major">전문분야</string>
    <string name="award">수상경력</string>
    <string name="blog_hint">www.naver.com</string>
    <string name="job_hint">개발자</string>
    <string name="major_hint">JPA Python Jwt</string>
    <string name="award_hint">알고리즘대회 1등</string>
    <string name="choose_major">전공을 선택해주세요!</string>
    <string name="web_app">웹/앱</string>
    <string name="server">서버/네트워크</string>
    <string name="ai">AI</string>
    <string name="data">데이터</string>
    <string name="security">보안</string>
    <string name="insert_phone_name">이름과 번호를 입력해주세요.</string>
    <string name="name">이름</string>
    <string name="phone">전화번호</string>
    <string name="phone_hint">01046666208</string>
    <string name="insert_nickname">닉네임을 입력해주세요!</string>
    <string name="mentor_mentee_selection">처음 오셧군요, 반가워요!\n멘토이신가요 멘티이신가요?</string>
    <string name="mentor">MENTOR</string>
    <string name="mentee">MENTEE</string>
    <string name="insert_password">비밀번호를 입력해주세요</string>
    <string name="password_hint">*******</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    navi_menu
    ----------------------------------------------------------------------------------------------------
    <string name="search_mentor">멘토찾기</string>
    <string name="chat">채팅</string>
    <string name="board">게시판</string>
    <string name="my_page">마이페이지</string>

    mentorSearchFragment
    ----------------------------------------------------------------------------------------------------
    <string name="mentor_search_fragment">관심분야와 상세분야를\n선택해주세요.</string>
    <string name="mentor_search_fragment_2">제목과 질문 내용을\n입력해주세요.</string>
    <string name="mentor_search_fragment_3">제목을 입력해주세요.</string>
    <string name="mentor_search_fragment_4">질문내용을 작성해주세요.</string>
    <string name="interest">관심분야</string>
    <string name="specify_field">상세분야</string>
    <string name="put_specify_field">상세분야를 입력해주세요</string>
    <string name="title">제목</string>
    <string name="content">질문내용</string>

    boardFragment
    ----------------------------------------------------------------------------------------------------
    <string name="free">자유게시판</string>
    <string name="question">질문게시판</string>
    <string name="study">스터디게시판</string>
    <string name="my_board">내가 쓴 글</string>
    <string name="my_heart">내가 좋아요한 게시글</string>

</resources>