<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_info"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/job"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/editJob"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/job_hint"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/blog"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/editBlogUrl"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/blog_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="전문분야"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/editExpertiseField"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/major_hint"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/award"
            android:textColor="@color/gray" />


        <EditText
            android:id="@+id/editPublicRelations"
            android:layout_width="320dp"
            android:layout_height="170dp"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/award_hint"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:autofillHints="no"
            android:inputType="text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
