<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.mentorSearchFragment.QuestionInterestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/mentor_search_fragment"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="25dp"
            android:background="@color/light_gray" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wepAppTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:background="@drawable/selected_round_button_gray"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/web_app" />

            <TextView
                android:id="@+id/serverTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:gravity="center"
                android:text="@string/server"
                android:background="@drawable/selected_round_button_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aiTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:background="@drawable/selected_round_button_gray"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/ai" />

            <TextView
                android:id="@+id/dataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:gravity="center"
                android:text="@string/data"
                android:background="@drawable/selected_round_button_gray"/>
            <TextView
                android:id="@+id/securityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:gravity="center"
                android:text="@string/security"
                android:background="@drawable/selected_round_button_gray"/>
        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/specify_field"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSpecify"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_gray"
            android:gravity="top"
            android:hint="@string/put_specify_field"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:textColorHint="@color/gray"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


</LinearLayout>