<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.mentorSearchFragment.QuestionContentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/mentor_search_fragment_2"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="25dp"
            android:background="@color/light_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_gray"
            android:gravity="top"
            android:hint="@string/mentor_search_fragment_3"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:textColorHint="@color/gray"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSpecifyField"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_gray"
            android:gravity="top"
            android:hint="@string/mentor_search_fragment_4"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:textColorHint="@color/gray"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


</LinearLayout>