<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.signUpFragment.MajorPartFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/choose_major"
            android:textColor="@color/black"
            android:textStyle="bold"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/majorBtn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/web_app"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@drawable/selected_text"
            android:background="@drawable/major_select_background"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/majorBtn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/server"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@drawable/selected_text"
            android:background="@drawable/major_select_background"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/majorBtn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ai"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@drawable/selected_text"
            android:background="@drawable/major_select_background"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/majorBtn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/data"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@drawable/selected_text"
            android:background="@drawable/major_select_background"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/majorBtn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/security"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@drawable/selected_text"
            android:background="@drawable/major_select_background"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>